Bug 1700676 - Unregister the lock itself before unblock other locks; r=dom-storage-reviewers,sg,janv

Differential Revision: https://phabricator.services.mozilla.com/D109640